@@ -1,0 +1,3 @@
+name = Classic
+description = This is the "classic" theme which ships with FlightPath.
+core = 4.x
