@@ -1,0 +1,10 @@
+/**
+ * @file
+ * This is where your custom CSS goes, to keep it separate from the "default" CSS definitions
+ * in style.css and mobile.css.
+ * 
+ * NOTE:  Do not edit this in the "core" theme directory.  If you wish to tweak the classic
+ * theme, first copy it to your custom folder.  Ex: custom/themes/my_classic, then visit your
+ * System settings and set the theme location to custom/themes/my_classic.
+ * 
+ */
