@@ -1,0 +1,198 @@
+/**
+ * @file
+ * This is where the CSS directly related to the theme's layout goes.  For example, CSS regarding
+ * corners of tables, width of page, etc.
+ */
+
+body
+{
+  font-family: Arial, Helvetica, sans serif;
+  background-color: #ECECDB;
+}
+
+
+/* 
+ * Page top banner 
+ */
+
+table.top-banner {
+  margin-bottom: 1.2em;
+}
+
+/* Don't display if this is a popup! */
+.page-is-popup table.top-banner {
+  display: none;
+}
+
+/**
+ *   "layout" tables.  Ie, the curved tables of the main content, and top banner.
+ */
+
+table.fp-layout-table {
+  width: 800px;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  border-spacing: 0;
+  border-collapse: collapse;
+  background-color: white;
+}
+
+/* If it's in a popup, change to 100% width */
+.page-is-popup table.fp-layout-table {
+  width: 100%;
+}
+
+
+
+.fp-layout-table .corner-top-left {
+  text-align: left;
+  width: 28px;  
+  vertical-align: baseline;  
+  background: url('images/tl.gif') #ECECDB top left no-repeat;
+  padding: 0;
+  margin: 0;
+}
+
+.fp-layout-table .layout-table-top {
+  vertical-align: baseline;
+  background: url('images/top.gif') #ECECDB repeat-x; 
+  width: 800px;
+  padding: 0;
+  margin: 0;  
+}
+
+.fp-layout-table .corner-top-right {
+  text-align: right;
+  width: 33px;
+  height: 17px;
+  vertical-align: baseline;  
+  background: url('images/tr.gif') #ECECDB top right no-repeat;
+  padding: 0;
+  margin: 0;  
+}
+
+.fp-layout-table .layout-table-left {
+
+  padding: 0;
+  margin: 0;
+  background: url('images/left.gif') repeat-y top left;  
+}
+
+.fp-layout-table .layout-table-right {
+  padding: 0;
+  margin: 0;
+  background: url('images/right.gif') repeat-y top right;
+
+}
+
+.fp-layout-table .layout-table-content {
+  padding: 0;
+  margin: 0;  
+}
+
+.fp-layout-table .corner-bottom-left {
+  text-align: left;
+  vertical-align: bottom;  
+  background: url('images/bl.gif') #ECECDB no-repeat;
+  padding: 0;
+  margin: 0;
+  width: 33px;
+  height: 36px; 
+}
+
+.fp-layout-table .layout-table-bottom {
+  vertical-align: bottom;
+  background: url('images/bottom.gif') #ECECDB repeat-x;
+  padding: 0;
+  margin: 0; 
+}
+
+.fp-layout-table .corner-bottom-right {
+  text-align: right;
+  vertical-align: bottom;
+  background: url('images/br.gif') #ECECDB no-repeat;
+  padding: 0;
+  margin: 0;
+  width: 33px;
+  height: 36px; 
+}
+
+.layout-table-spacer_33_36 {
+  width: 33px;
+  height: 36px;
+}
+
+/* Tabs & search */
+
+td.tabs-search-td {
+  margin: 0;
+  padding: 0;
+}
+
+table.tabs-search-table {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  text-align: left;
+  border: 0;
+  border-spacing: 0;
+  border-collapse: collapse;
+  background-color: #ECECDB;
+}
+
+table.tabs-search-table td {
+  padding: 0;
+  margin: 0;
+}
+
+table.tabs-table-tabs {
+  width: 100%;
+  text-align: left; 
+  border: 0;
+  border-spacing: 0;
+  border-collapse: collapse;
+  
+}
+
+.tabs-table-tabs td {
+  padding: 0;
+  margin: 0;
+}
+
+table.tabs-search-table td.search-td {
+  text-align: right;
+  width: 100%;
+  vertical-align: bottom;
+  padding-right: 30px;  
+}
+
+
+/* Page content */
+
+.page-content {
+  width: 98%;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+
+.page-is-popup .page-content {
+  min-height: 250px;
+}
+
+/* bottom message / footer region */
+
+.fp-bottom-message {
+  font-size: 0.7em;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 40px;
+}
+
+.page-is-popup .fp-bottom-message {
+  width: 100px;
+  margin: 0;
+}
+
