@@ -1,8 +1,9 @@
-body
-{
-	font-family: Arial;
-	background-color: #ECECDB;
-}
+/**
+ * @file
+ * This CSS file pertains to the look of content itself in FlightPath.
+ */
+
+
 
 .c-fieldset-content {
   /*  the astericks mean "only for IE" */
